docs: fix header element causing horizontal scroll bars

--- a/docs/assets/javascript/elements/uxdot-header.css
+++ b/docs/assets/javascript/elements/uxdot-header.css
@@ -1,27 +1,43 @@
 :host {
+  --_uxdot-header-padding: var(--rh-space-2xl);
+
   display: block;
   container-type: inline-size;
   container-name: header;
   background-color: var(--rh-color-surface);
+
+  @container (min-width: 768px) {
+    --_uxdot-header-padding: var(--rh-space-3xl);
+  }
+
+  @container (min-width: 992px) {
+    --_uxdot-header-padding: var(--rh-space-6xl);
+  }
 }
 
 #container {
   display: block;
-  z-index: 2;
   max-width: 1140px;
-  padding-block-start: var(--_uxdot-header-padding, var(--rh-space-2xl));
-  padding-inline: var(--_uxdot-header-padding, var(--rh-space-2xl));
-}
+  padding-block-start: var(--_uxdot-header-padding,);
+  padding-inline: var(--_uxdot-header-padding);
 
-#container:not(.hasSubnav) {
-  padding-block-end: var(--_uxdot-header-padding, var(--rh-space-2xl));
-}
+  &.hasSearch {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-areas: 'heading' 'search';
+    gap: var(--rh-space-2xl);
+  }
 
-#container.hasSearch {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-areas: 'heading' 'search';
-  gap: var(--rh-space-2xl);
+  &:not(.hasSubnav) {
+    padding-block-end: var(--_uxdot-header-padding);
+  }
+
+  @container header (min-width: 992px) {
+    &.hasSearch {
+      grid-template-columns: 1fr 1fr;
+      grid-template-areas: 'heading search';
+    }
+  }
 }
 
 [part='heading'] {
@@ -44,30 +60,8 @@
 
 ::slotted([slot='subnav']) {
   margin-block-start: var(--rh-space-2xl);
-  inset-inline-start: calc(-1 * var(--rh-space-2xl));
-  position: relative;
-  width: calc(100% + var(--_uxdot-header-padding, var(--rh-space-2xl)) * 2);
-}
 
-@container header (min-width: 768px) {
-  #container {
-    --_uxdot-header-padding: var(--rh-space-3xl);
-  }
-}
-
-@container header (min-width: 992px) {
-  :host {
-    margin-block-end: var(--rh-space-6xl);
-  }
-
-  #container {
-    top: 100px;
-
-    --_uxdot-header-padding: var(--rh-space-6xl);
-  }
-
-  #container.hasSearch {
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas: 'heading search';
-  }
+  /* take the header padding and minus the default padding (2xl), for mobile it should maximize
+  soace for the subnav, but for larger viewports it will align the first button text with header */
+  padding-inline: calc(var(--_uxdot-header-padding) - var(--rh-space-2xl));
 }
